# tetris

./: .gitignore  .gitmodules  CMakeLists.txt  Figure.cpp  Figure.h  LFigure.cpp  LFigure.h  LLFigure.cpp  LLFigure.h  LRFigure.cpp  run.cpp
src/: Board.cpp  Board.h  CMakeLists.txt  Collisions.cpp  Collisions.h  Figure.cpp  Figure.h  IFigure.h  LLFigure.h  LRFigure.h  Movement.cpp  Movement.h  Point.h  enums.h  main.cpp  run.cpp  run_rl.cpp  test.cpp
src/board/: Board.cpp  Board.h  PainterLocal.cpp  PainterLocal.h
src/core/: Board.cpp  Board.h  PainterLocal.cpp  PainterLocal.h  enums.h
src/figures/: Figure.cpp  Figure.h  FigureLocal.h  IFigure.cpp  IFigure.h  LLFigure.cpp  LLFigure.h  LRFigure.cpp  LRFigure.h  SFigure.cpp  SFigure.h  SQFigure.cpp  SQFigure.h  TFigure.cpp  TFigure.h  ZFigure.cpp  ZFigure.h  enums.h
src/helpers/: Singletone.h  helper.cpp  helper.h
src/painter/: Painter.cpp  Painter.h  PainterImpl.cpp  PainterImpl.h
